--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   http: ^1.4.0
   image_cropper: ^9.1.0
   video_compress: ^3.1.4
+  crop_your_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
