--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   image_cropper: ^9.1.0
   video_compress: ^3.1.4
   crop_your_image: ^2.0.0
+  dio: ^5.9.0
 
 dev_dependencies:
   flutter_test:
