--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,13 +52,15 @@ dependencies:
   jwt_decoder: ^2.0.1
   video_player: ^2.9.5
   dropdown_search: ^6.0.2
-  file_picker: ^8.3.7
   http: ^1.4.0
   image_cropper: ^9.1.0
   video_compress: ^3.1.4
   crop_your_image: ^2.0.0
   dio: ^5.9.0
   flutter_quill: ^11.4.2
+
+dependency_overrides:
+  file_picker: ^8.3.7
 
 dev_dependencies:
   flutter_test:
